--- a/_config.yml
+++ b/_config.yml
@@ -3,28 +3,28 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Username
+name: gdfe.co
 
 # Short bio or description (displayed in the header)
-description: Programmer From Somewhere On Earth
+description: Putting words on <del>paper</del> the internet
 
 
 #
 # Flags below are optional
 #
 
-# Includes an icon in the footer for each username you enter
+# Includes an icon in the footer for each username you Enter
 footer-links:
   dribbble:
-  email: agarwal.akshay.akshay8@gmail.com
+  email: 
   facebook:
   flickr:
-  github: AkshayAgarwal007
+  github: gergness
   instagram:
-  linkedin: akshay-agarwal-782018a4
+  linkedin: 
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: gregfreedman
   stackoverflow: # your stackoverflow profile, e.g. "users/3807565/akshay"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -35,11 +35,11 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-81635172-1
 
 # Your website URL (e.g. http://akshayagarwal007.github.io)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://gdfe.co
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -51,7 +51,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /blog/:title/
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
@@ -65,12 +65,13 @@ kramdown:
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :expanded # You might prefer to minify using :compressed
+  style: :compressed # You might prefer to minify using :compressed
 
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-redirect-from
 
 # Exclude these files from your production _site
 exclude:
