Update email address

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: Putting words on <del>paper</del> the internet
 # Includes an icon in the footer for each username you Enter
 footer-links:
   dribbble:
-  email: 
+  email: gdfe.co.mail@gmail.com
   facebook:
   flickr:
   github: gergness
